corpus/rule.txt
===
Rule
===

module EXERCISE_1-SYNTAX
    imports DOMAIN
    imports INT-SYNTAX

    syntax Bool ::=
        "true"
      | "false"
      | not(Bool) [functional]

    rule not(true) => false
endmodule

---

(source_file
    (module
        (module_name)
        (imports (module_name))
        (imports (module_name))
        (syntax (builtin_sort))
        (rule
            (_rule_lhs) (_rule_rhs))
    )
)
